--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,6 +1,6 @@
 /* MEDIA QUERIES */
 
-@media screen and (max-width: 480px){
+/* @media screen and (max-width: 480px){
   .mobile-nav{
     
     position: absolute;
@@ -36,7 +36,7 @@
     z-index: 100;
     /* background: grey; */
   
-  }
+  /* }
   nav ul .open{
     height: auto;
   }
@@ -58,344 +58,137 @@
   }
 
 
-}
-
-/* @media screen and (min-width: 1330px) {
-  .portfolio {
-    grid-template-columns: repeat(3, 1fr); 
-    /* grid-gap: 1.5rem;
-    width: 55rem;
-    height: 70vh;
-    margin-left: 30%;
-    margin-bottom: 5%; */
-  
-  
-  /* } 
 } */ 
 
 
-/* and (max-width: 1330px */
 
-/* @media screen and (min-width: 769px) and (max-width: 1170px) {
-  .portfolio-container{ */
-    /* margin-right: 10%;
-    margin-left: 45%; */
-    /* margin-top: 10%; */
-    /* height: 200%;
+
+
+@media screen and (min-width: 1171px) {
+
+  .new-menu {
     width: 100%;
-    display: flex !important;
-    flex-direction: column !important;
-    align-items: center;
-  } */
+     height: 15%;
+     background-color: white;
+     border-bottom: 0.1em solid lightgray;
+     margin: 0;
+     padding: 0;
+}
 
-  /* .portfolio-font{
-    margin-top: 23%;
-    margin-left: 15%;
-    margin-bottom: 10%;
+   .menu-nav{
+     height: 100%;
+     padding: 0;
+     margin: 0;
+     display: grid;
+     grid-template-columns: repeat(9, 1fr);
+     }
+   
+   
+   ul{
+     width: 100%;
+     
+     color: #212d50;
+   }
+   
+   ul, li {
+     list-style-type: none;
+     
+   }
+   
+  
+
+   .name{
+     height: 100%;
+     grid-column: 1/ 3;
+   }
+
+   .projects-link{
+     height: 100%;
+     grid-column: 6/ 7;
+   }
+
+   .about-contact{
+     height: 100%;
+     grid-column: 7/ 8;
+   }
+
+   .contact{
+     height: 100%;
+     grid-column: 8/ 10;
+    
+   }
+   
+   .name-text{
+     color: #212d50;
+     margin: 15% 0 0 40%;
   }
 
-  .portfolio{
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-gap: 1rem;
-    width: 30rem ;
-    height: 200vh; */
-    /* margin-top: 20%; */
-    /* margin-left: 45%;
-    margin-right: 1%; */
-    /* margin-bottom: -1%; */
+   .project-text{
+     margin: 40% 0 0 0;
     
-
-/* } */
-
-/* .name{ */
-  /* display: flex;
-  flex-direction: row; */
-  /* height: 10%; */
-  /* width: 30%; */
-  /* margin-left: 30%;
-  margin-bottom: 20%; */
-  /* width: 100%; */
-  /* z-index: 100; */
-  /* width: 100%; */
-/* } */
-
-/* .name-text{
-  width: 100%;
-}
-
-a.name-link-font{
-  width: 100%;
-}
-.projects-link{
-  margin-top: 25%;
-  margin-left: -70%
-}
-
-.about-contact{
-  margin-top: 25%;
-  margin-left: 15%;
-}
-
-.contact{
-  margin-top: 25%;
-  margin-left: 10%;
-}
-
-.new-menu{
-  display: flex; */
-  /* flex-direction: row !important; */
-  /* width: 100%;
-  height: 20%; */
-  /* background-color: white;
-  position: fixed;
-  top: 0;
-  z-index: 100;
-  border-bottom: 0.1em solid lightgray;
-  
-}
-.menu-nav{
-  display: flex; */
-  /* flex-direction: row; */
-  /* flex-wrap: wrap; */
-
-/* }
-ul{
-  width: 100%; */
-  /* align-items: center; */
-/* } */
-
-/* ul, li {
-  list-style-type: none;
-  align-items: center;
-}
-
-li {
-  
-  margin-bottom: 5%;
-}
-
-div.intro{
-  width: 80%;
-  height: 40%;
-  margin-top: 85%;
-  margin-left: 10%; */
-  /* position: absolute; */
-  /* color: rgb(66, 66, 66);
-  font-size: 30px !important;
-  line-height: 30px !important;
-  font-weight: 400;
-  
-  letter-spacing: 0px;
-}
-
-h1{
-  font-family: 'Inconsolata', monospace;
-  
-  padding: 0;
-  font-size: 40px;
-    line-height: 40px;
-    font-weight: 400;
-    color: rgb(66, 66, 66);
-    letter-spacing: 0px;
-
-}
-h2{
-  font-family: 'Inconsolata', monospace;
-  
-  padding: 0;
-  font-size: 35px;
-    line-height: 40px;
-    font-weight: 400;
-    color: rgb(66, 66, 66);
-    letter-spacing: 0px;
-
-}
-
-.paragraph-container{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex; 
-  flex-direction: column; */
-  /* justify-content: center; */
-  /* align-items: center;
-  margin-top: 15%;
+   }
+   .about-text{
+     margin: 40% 0 0 10%;
+    
+   }
+   .contact-text{
+     margin: 20% 0 0 0;
+    
+   }
    
-}
+   .projects-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   
+   }
+   .about-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   }
+   .contact-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   }
 
-.paragraph{
-  display: flex;
-  flex-direction: column; */
-  /* align-items: center; */
-  /* width: 50%;
-  margin-top: 65%;
-  margin-left: -20%;
-
-}
-
-div.about-picture{ */
-  /* background-image: url("../assets/jhedi2_40.jpg");
+   #particles-js {
+    /* background: rgb(37, 40, 52); */
+    /* background: rgb(242, 240, 236); */
+    /* background: #F5F4F1; */
+    background: #F9F8F6;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    margin: 0;
   
-  background-size: cover; */
-  /* position: absolute;
-  margin-top: 15%;
-  height: 40%;
-  width: 40%; */
-  /* margin-top: 20%; */
-  /* margin-left: -15%;
-  border: solid 1px;
+  }
   
-}
-
-.contact-font-last{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  margin-top: 58%;
-  margin-left: 16%;
-}
-.contact-page{
-  width: 30%;
-  margin-top: 0%;
-  margin-right: 80%;
+  .container{
+    position: absolute;
+    width: 100%;
+    /* margin-top: 25%;
+    margin-left: 25%; */
+  }
   
+  div.intro{
+    width: 100%;
+    height: 40%;
+    margin-top: 50%;
+    margin-left: 5%;
+    position: absolute;
+    color: rgb(66, 66, 66);
+    font-size: 45px;
+    line-height: 45px;
+    font-weight: 400;
+    
+    letter-spacing: 0px;
+  }
 }
-
-div.map{ */
-  /* background-image: url("../assets/jhedi2_40.jpg");
-  
-  background-size: cover; */
-  /* position: absolute;
-  height: 35%;
-  width: 45%;
-  margin: 0; */
-  /* margin-bottom: 100%; */
-  /* margin-top: -20%; */
-  /* margin-left: -30%; */
-  /* border: solid 1px;
-  
-}
-
-
-
-
-}
-
-
-@media screen and (min-width: 1171px) {
-.portfolio-container{
-  margin-right: 25%;
-  margin-left: 0%;
-  margin-bottom: 1%;
-  height: 100%;
-  width: 80%;
-  display: flex !important;
-  flex-direction: row !important;
-}
-
-.portfolio-font{
-  margin-top: 25%;
-  margin-left: 3%;
-}
-
-.portfolio{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1rem;
-  width: 85rem ;
-  height: 70vh;
-  margin-left: 5%;
-  margin-right: 1%;
-  margin-bottom: 5%;
-
-}
-}
-
-@media screen and (min-width: 1200px) {
-.portfolio-container{
-  height: 100%;
-  width: 100%;
-  display: flex !important;
-  flex-direction: row !important;
-}
-
-.portfolio-font{
-  height: 100%;
-  margin-top: 20%;
-  margin-left: 8%;
-}
-
-.portfolio{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1.5rem;
-  
-  width: 85rem ;
-  height: 70vh;
-  margin-left: 5%;
-  margin-right: 1%; */
-  /* margin-bottom: 5%; */
-
-/* }
-} */
-
-/* @media screen and (min-width: 1025px) and (max-width: 1171px) {
-.portfolio-container{
-  margin-right: 25%;
-  margin-left: 0%;
-  height: 100%;
-  width: 75%;
-  display: flex !important;
-  flex-direction: row !important;
-}
-
-.portfolio-font{
-  margin-top: 27%;
-  margin-left: 3%;
-}
-
-.portfolio{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1rem;
-  width: 85rem ;
-  height: 70vh;
-  margin-left: 5%;
-  margin-right: 1%;
-  margin-bottom: 5%;
-
-}
-} */
-
-
-
-
-
-
-/* @media screen and (min-width: 1171px) {
-.portfolio {grid-template-columns: repeat(3, 1fr); } 
-}
-
-@media screen and (min-width: 1171px) {
-.portfolio {grid-template-columns: repeat(3, 1fr); } 
-}
-
-@media screen and (min-width: 1171px) {
-.portfolio {grid-template-columns: repeat(3, 1fr); } 
-} */
-
-
-/* @media screen and (min-width: 769px) and (max-width: 1170px) {
-.portfolio {
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 1.5rem;
-  width: 55rem;
-  height: 70vh;
-  margin-left: 38%;
-  margin-bottom: 5%;
-  } 
-
-} */
