--- a/styles/style.css
+++ b/styles/style.css
@@ -1,127 +1,8 @@
 
  @import "mobile.css";
+ @import "nav.css";
 
 
-                                                                            /* NAV BAR */
-.new-menu{
-  display: flex;
-  flex-direction: row !important;
-  width: 100%;
-  height: 15%;
-  background-color: white;
-  /* position: fixed; */
-  top: 0;
-  z-index: 100;
-  border-bottom: 0.1em solid lightgray;
-  
-}
-.menu-nav{
-  display: flex;
-  flex-direction: row;
-
-}
-
-/* .contact-container div:nth-child(even){
-  background-color: lightblue;
-}
-
-.contact-container div:nth-child(odd){
-  background-color: lightgray;
-} */
-
-ul{
-  width: 100%;
-  align-items: center;
-  color: #212d50;
-}
-
-ul, li {
-  list-style-type: none;
-  align-items: center;
-}
-
-li {
-  margin-bottom: 5%;
-}
-.name{
-  height: 100%;
-  width: 40%;
-  float: left;
-}
-.projects-link{
-  height: 100%;
-  width: 25%;
-}
-.about-contact{
-  height: 100%;
-  width: 10%;
-}
-.contact{
-  height: 100%;
-  width: 25%;
-  float: right;
-}
-
-
-
-.name-text{
-  color: #212d50;
-  margin-top: 10%;
-  /* height: 50px; */
-  align-content: center;
-  
-}
-.project-text{
-  margin-top: 20%;
-  /* height: 50px; */
-  align-content: center;
-}
-.about-text{
-  margin-top: 50%;
-  /* height: 50px; */
-  align-content: flex-end;
-}
-.contact-text{
-  margin-top: 20%;
-  /* height: 50px; */
-  align-content: center;
-  /* margin-left: 5px; */
-}
-
-.projects-font{
-  
-  
-  margin-left: 65%;
-  line-height: 40px;
-  font-size: 20px;
-  font-weight: 400;
-  cursor: pointer;
-  
-    letter-spacing: 3px;
-
-}
-.about-font{
-  
-  
-  margin-left: 35%;
-  line-height: 40px;
-  font-size: 20px;
-  font-weight: 400;
-  cursor: pointer;
-  
-    letter-spacing: 3px;
-}
-.contact-font{
-  
-  margin-left: 15%;
-  line-height: 40px;
-  font-size: 20px;
-  font-weight: 400;
-  cursor: pointer;
-  letter-spacing: 3px;
-}
-
-                                                                      /* END NAV BAR */
 
                                                                      /* LANDING PAGE */
 
@@ -147,7 +28,7 @@ li {
 div.intro{
   width: 100%;
   height: 40%;
-  margin-top: 40%;
+  margin-top: 30%;
   margin-left: 5%;
   position: absolute;
   color: rgb(66, 66, 66);
@@ -392,7 +273,7 @@ div.intro{
   margin-left: 15%;
   width: 100%;
   height: 100%;
-  position: absolute;
+  /* position: absolute; */
 
 }
 
@@ -552,13 +433,14 @@ a{
 
 }
 
-.name-link-font{
+ .name-link-font{
   font-family: 'Montserrat', sans-serif;
   font-weight: 400 bold !important;
   color: #212d50 !important;
   line-height: 45px;
   font-size: 55px;
   letter-spacing: 5px;
+  margin-top: 10%;
   margin-left: 15%;
   cursor: pointer;
 }
@@ -575,8 +457,8 @@ a{
   font-family: 'Montserrat', sans-serif;
   font-weight: 400 ;
   color: #212d50 !important;
-  font-size: 20px !important;
-  line-height: 45px;
+  font-size: 13px !important;
+  line-height: 40px;
   letter-spacing: 0px;
   margin-top: 5%;
 }
@@ -640,10 +522,737 @@ a{
 
 
 
+@media screen and (min-width: 1171px) {
+
+  .new-menu {
+    width: 100%;
+     height: 15%;
+     background-color: white;
+     border-bottom: 0.1em solid lightgray;
+     margin: 0;
+     padding: 0;
+}
+
+   .menu-nav{
+     height: 100%;
+     padding: 0;
+     margin: 0;
+     display: grid;
+     grid-template-columns: repeat(9, 1fr);
+     }
+   
+   
+   ul{
+     width: 100%;
+     
+     color: #212d50;
+   }
+   
+   ul, li {
+     list-style-type: none;
+     
+   }
+   
+  
+
+   .name{
+     height: 100%;
+     grid-column: 1/ 3;
+   }
+
+   .projects-link{
+     height: 100%;
+     grid-column: 6/ 7;
+   }
+
+   .about-contact{
+     height: 100%;
+     grid-column: 7/ 8;
+   }
+
+   .contact{
+     height: 100%;
+     grid-column: 8/ 10;
+    
+   }
+   
+   .name-text{
+     color: #212d50;
+     margin: 15% 0 0 40%;
+  }
+
+   .project-text{
+     margin: 40% 0 0 0;
+    
+   }
+   .about-text{
+     margin: 40% 0 0 10%;
+    
+   }
+   .contact-text{
+     margin: 20% 0 0 0;
+    
+   }
+   
+   .projects-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   
+   }
+   .about-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   }
+   .contact-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   }
+
+   #particles-js {
+    /* background: rgb(37, 40, 52); */
+    /* background: rgb(242, 240, 236); */
+    /* background: #F5F4F1; */
+    background: #F9F8F6;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+  
+  }
+  
+  .container{
+    position: absolute;
+    width: 100%;
+    /* margin-top: 25%;
+    margin-left: 25%; */
+  }
+  
+  div.intro{
+    width: 100%;
+    height: 40%;
+    margin-top: 35%;
+    margin-left: 5%;
+    position: absolute;
+    color: rgb(66, 66, 66);
+    font-size: 45px;
+    line-height: 45px;
+    font-weight: 400;
+    
+    letter-spacing: 0px;
+  }
+
+  .about-picture{
+    background-image: url("../assets/jhedi2_40\ 3.jpg");
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    margin-right: 10%;
+    grid-column: 6 / 8;
+    grid-row: 1/2;
+  }
+
+}
 
 
+@media screen and (min-width: 768px) and (max-width: 991px) {
 
 
+  .name-link-font{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400 bold !important;
+    color: #212d50 !important;
+    line-height: 45px;
+    font-size: 50px;
+    letter-spacing: 5px;
+    margin-top: 10%;
+    margin-left: 15%;
+    cursor: pointer;
+  }
+
+  .intro-font{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400 ;
+    color: #212d50 !important;
+    font-size: 40px;
+    line-height: 45px;
+    letter-spacing: 3px;
+  
+  }
+  
+  .intro-paragraph-font{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 30px;
+    color: #212d50 !important;
+    letter-spacing: 3px;
+  }
+
+  .new-menu {
+    width: 100%;
+     height: 15%;
+     background-color: white;
+     border-bottom: 0.1em solid lightgray;
+     margin: 0;
+     padding: 0;
+}
+
+   .menu-nav{
+     height: 100%;
+     padding: 0;
+     margin: 0;
+     display: grid;
+     grid-template-columns: repeat(9, 1fr);
+     grid-auto-rows: 50%;
+
+     }
+   
+   
+   ul{
+     width: 100%;
+     
+     color: #212d50;
+   }
+   
+   ul, li {
+     list-style-type: none;
+     
+   }
+   
+  
+
+   .name{
+     height: 100%;
+     grid-column: 1/ 10;
+     grid-row: 1;
+
+   }
+
+   .projects-link{
+     height: 100%;
+     grid-column: 3/ 4;
+   }
+
+   .about-contact{
+     height: 100%;
+     grid-column: 5/ 6;
+   }
+
+   .contact{
+     height: 100%;
+     grid-column: 7/ 10;
+    
+   }
+   
+   .name-text{
+     color: #212d50;
+     margin-left: 35%;
+     margin-top: 3%;
+  }
+
+   .project-text{
+    margin: 15% 0 0 0;
+    
+   }
+   .about-text{
+    margin: 15% 0 0 0;
+    
+   }
+   .contact-text{
+    margin: 5% 0 0 0;
+    
+   }
+   
+   .projects-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   
+   }
+   .about-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   }
+   .contact-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   }
+
+   #particles-js {
+    /* background: rgb(37, 40, 52); */
+    /* background: rgb(242, 240, 236); */
+    /* background: #F5F4F1; */
+    background: #F9F8F6;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+  
+  }
+  
+  .container{
+    position: absolute;
+    width: 100%;
+    /* margin-top: 25%;
+    margin-left: 25%; */
+  }
+  
+  div.intro{
+    width: 100%;
+    height: 40%;
+    margin-top: 65%;
+    margin-left: 5%;
+    position: absolute;
+    color: rgb(66, 66, 66);
+    font-size: 45px;
+    line-height: 45px;
+    font-weight: 400;
+    
+    letter-spacing: 0px;
+  }
+
+  .portfolio{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 40%;
+    /* grid-gap: 3rem; */
+    /* margin-top: 5%; */
+    margin-left: 10%;
+    
+    width: 80%;
+    height: 110%;
+    
+  }
+  .portfolio-heading {
+    display: flex;
+    margin-top: 20%;
+    flex-direction: column;
+    align-items: center;
+    grid-column: 1 ;
+
+    grid-row: 1 ;
+}
+
+  .box-1{
+    /* height: 100%; */
+    grid-column: 1;
+    grid-row: 2 ;
+  }
+
+  .box-2{
+    grid-column: 1;
+    grid-row: 3;
+  }
+  .box-3{
+    grid-column: 1 ;
+    grid-row: 4;
+  }
+  .box-4{
+    grid-column: 1;
+    grid-row: 5;
+  }
+  .box-5{
+    grid-column: 1 ;
+    grid-row: 6;
+  }
+  .box-6{
+    grid-column: 1;
+    grid-row: 7;
+  }
+  
+
+  .paragraph-container{
+    /* background: rgb(242, 240, 236); */
+    background: #F9F8F6;
+    margin-top: 220%;
+    width: 100%;
+    height: 150%;
+    /* display: flex;  */
+    
+    /* align-items: center; */
+    
+  }
+  
+  
+  .paragraph{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 40%;
+    grid-gap: 1rem;
+    margin-top: 15%;
+    margin-left: 10%;
+    width: 70%;
+    height: 100%;
+    position: absolute;
+  
+  }
+  
+  
+  
+  .about-blurb{
+    grid-column: 1 ;
+    grid-row: 1 ;
+    width: 80%;
+    /* margin-left: 5%; */
+    display: flex;
+    flex-direction: column;
+    
+  }
+  
+  
+  
+  .about-picture{
+    background-image: url("../assets/jhedi2_40\ 3.jpg");
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    margin-right: 10%;
+    grid-column: 1 !important;
+    grid-row: 2 !important;
+  }
+  
+  .second-about-blurb{
+    grid-column: 1 !important;
+    grid-row: 3 !important;
+    margin-top: 13%;
+    margin-left: 0;
+  }
+  
+  .second-about-img{
+    background-image: url("../assets/IMG_2635.jpg");
+    background-size: cover;
+    grid-column: 1 !important;
+    grid-row: 3 !important;
+    margin-top: 20%;
+  }
+  /* .third-about-img{
+    grid-column: 2 / 3;
+    grid-row: 2/3;
+  
+  } */
+                                                                                  
+  
+  .about-picture{
+    background-image: url("../assets/jhedi2_40\ 3.jpg");
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    margin-right: 10%;
+    grid-column: 6 / 8;
+    grid-row: 1/2;
+  }
+
+  
+}
+
+@media screen and (min-width: 576px) and (max-width: 767px){
+  .name-link-font{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400 bold !important;
+    color: #212d50 !important;
+    line-height: 45px;
+    font-size: 50px;
+    letter-spacing: 5px;
+    margin-top: 10%;
+    margin-left: 15%;
+    cursor: pointer;
+  }
+
+  .intro-font{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400 ;
+    color: #212d50 !important;
+    font-size: 40px;
+    line-height: 45px;
+    letter-spacing: 3px;
+  
+  }
+  
+  .intro-paragraph-font{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 30px;
+    color: #212d50 !important;
+    letter-spacing: 3px;
+  }
+
+  .new-menu {
+    width: 100%;
+     height: 15%;
+     background-color: white;
+     border-bottom: 0.1em solid lightgray;
+     margin: 0;
+     padding: 0;
+}
+
+   .menu-nav{
+     height: 100%;
+     padding: 0;
+     margin: 0;
+     display: grid;
+     grid-template-columns: repeat(9, 1fr);
+     grid-auto-rows: 50%;
+
+     }
+   
+   
+   ul{
+     width: 100%;
+     
+     color: #212d50;
+   }
+   
+   ul, li {
+     list-style-type: none;
+     
+   }
+   
+  
+
+   .name{
+     height: 100%;
+     grid-column: 1/ 10;
+     grid-row: 1;
+
+   }
+
+   .projects-link{
+     height: 100%;
+     grid-column: 3/ 4;
+   }
+
+   .about-contact{
+     height: 100%;
+     grid-column: 5/ 6;
+   }
+
+   .contact{
+     height: 100%;
+     grid-column: 7/ 10;
+    
+   }
+   
+   .name-text{
+     color: #212d50;
+     margin-left: 35%;
+     margin-top: 3%;
+  }
+
+   .project-text{
+    margin: 15% 0 0 0;
+    
+   }
+   .about-text{
+    margin: 15% 0 0 0;
+    
+   }
+   .contact-text{
+    margin: 5% 0 0 0;
+    
+   }
+   
+   .projects-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   
+   }
+   .about-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   }
+   .contact-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   }
+
+   #particles-js {
+    /* background: rgb(37, 40, 52); */
+    /* background: rgb(242, 240, 236); */
+    /* background: #F5F4F1; */
+    background: #F9F8F6;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+  
+  }
+  
+  .container{
+    position: absolute;
+    width: 100%;
+    /* margin-top: 25%;
+    margin-left: 25%; */
+  }
+  
+  div.intro{
+    width: 100%;
+    height: 40%;
+    margin-top: 65%;
+    margin-left: 5%;
+    position: absolute;
+    color: rgb(66, 66, 66);
+    font-size: 45px;
+    line-height: 45px;
+    font-weight: 400;
+    
+    letter-spacing: 0px;
+  }
+
+  .portfolio{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 40%;
+    /* grid-gap: 3rem; */
+    /* margin-top: 5%; */
+    margin-left: 10%;
+    
+    width: 80%;
+    height: 110%;
+    
+  }
+  .portfolio-heading {
+    display: flex;
+    margin-top: 20%;
+    flex-direction: column;
+    align-items: center;
+    grid-column: 1 ;
+
+    grid-row: 1 ;
+}
+
+  .box-1{
+    /* height: 100%; */
+    grid-column: 1;
+    grid-row: 2 ;
+  }
+
+  .box-2{
+    grid-column: 1;
+    grid-row: 3;
+  }
+  .box-3{
+    grid-column: 1 ;
+    grid-row: 4;
+  }
+  .box-4{
+    grid-column: 1;
+    grid-row: 5;
+  }
+  .box-5{
+    grid-column: 1 ;
+    grid-row: 6;
+  }
+  .box-6{
+    grid-column: 1;
+    grid-row: 7;
+  }
+  
+
+  .paragraph-container{
+    /* background: rgb(242, 240, 236); */
+    background: #F9F8F6;
+    margin-top: 300%;
+    width: 100%;
+    height: 150%;
+    /* display: flex;  */
+    
+    /* align-items: center; */
+    
+  }
+  
+  
+  .paragraph{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 40%;
+    grid-gap: 1rem;
+    margin-top: 15%;
+    margin-left: 10%;
+    width: 70%;
+    height: 100%;
+    position: absolute;
+  
+  }
+  
+  
+  
+  .about-blurb{
+    grid-column: 1 ;
+    grid-row: 1 ;
+    width: 80%;
+    /* margin-left: 5%; */
+    display: flex;
+    flex-direction: column;
+    
+  }
+  
+  
+  
+  .about-picture{
+    background-image: url("../assets/jhedi2_40\ 3.jpg");
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    margin-right: 10%;
+    grid-column: 1 !important;
+    grid-row: 2 !important;
+  }
+  
+  .second-about-blurb{
+    grid-column: 1 !important;
+    grid-row: 3 !important;
+    margin-top: 13%;
+    margin-left: 0;
+  }
+  
+  .second-about-img{
+    background-image: url("../assets/IMG_2635.jpg");
+    background-size: cover;
+    grid-column: 1 !important;
+    grid-row: 3 !important;
+    margin-top: 20%;
+  }
+  /* .third-about-img{
+    grid-column: 2 / 3;
+    grid-row: 2/3;
+  
+  } */
+                                                                                  
+  
+  .about-picture{
+    background-image: url("../assets/jhedi2_40\ 3.jpg");
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    margin-right: 10%;
+    grid-column: 6 / 8;
+    grid-row: 1/2;
+  }
+
+}
 
 
 
