--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,144 +1,116 @@
-/* MEDIA QUERIES */
 
-/* @media screen and (max-width: 480px){
-  .mobile-nav{
-    
-    position: absolute;
-    cursor: pointer;
-    display: block;
-    width: 5%;
-    margin-left: 95% !important;
-    margin-top: 3%;
-    
+
+@media screen and (max-width: 320px){
+  .name-link-font{
+    font-family: 'Montserrat', sans-serif !important;
+    font-weight: 400 bold !important;
+    color: #212d50 !important;
+    line-height: 40px !important;
+    font-size: 30px !important;
+    letter-spacing: 5px !important;
+    margin-top: 10% !important;
+    margin-left: 15% !important;
+    cursor: pointer !important;
+  }
+
+  .intro-font{
+    font-family: 'Montserrat', sans-serif !important;
+    font-weight: 400 !important;
+    color: #212d50 !important;
+    font-size: 20px !important;
+    /* line-height: 45px !important; */
+    letter-spacing: 3px !important;
   
   }
   
-  .btn-line {
-    width: 30px;
-    height: 4px;
-    margin: 0 0 5px 0;
-    background: #43454B;
-    
+  .intro-paragraph-font{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px !important;
+    color: #212d50 !important;
+    letter-spacing: 3px !important;
+    line-height: 0px !important;
   }
 
-  
-
-  .new-menu .menu-nav{
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    display: block;
-    float: none;
-    text-align: left;
-    width: 100%;
-    margin: 0%;
-    z-index: 100;
-    /* background: grey; */
-  
-  /* }
-  nav ul .open{
-    height: auto;
-  }
-  
-  .name-link-font .projects-font .about-font .contact-font{
-    color: black;
-    padding: 10px;
-    border-bottom: solid 1px lightgrey;
-    display: block;
-    margin: 0;
-  }
-
-  nav ul li a{
-    color: white;
-    padding: 10px;
-    border-bottom: solid 1px lightgrey;
-    display: block;
-    margin: 0;
-  }
-
-
-} */ 
-
-
-
-
-
-@media screen and (min-width: 1171px) {
 
   .new-menu {
-    width: 100%;
-     height: 15%;
-     background-color: white;
-     border-bottom: 0.1em solid lightgray;
-     margin: 0;
-     padding: 0;
+    width: 100% !important;
+     height: 15% !important;
+     background-color: white !important;
+     border-bottom: 0.1em solid lightgray !important;
+     margin: 0 !important;
+     padding: 0 !important;
 }
 
    .menu-nav{
-     height: 100%;
-     padding: 0;
-     margin: 0;
-     display: grid;
-     grid-template-columns: repeat(9, 1fr);
+     height: 100% !important;
+     padding: 0 !important;
+     margin: 0 !important;
+     display: grid !important; 
+     grid-template-columns: repeat(9, 1fr) !important;
+     grid-auto-rows: 50% !important; 
+
      }
    
    
    ul{
-     width: 100%;
+     width: 100% !important;
      
-     color: #212d50;
+     color: #212d50 !important;
    }
    
    ul, li {
-     list-style-type: none;
+     list-style-type: none !important;
      
    }
    
   
 
    .name{
-     height: 100%;
-     grid-column: 1/ 3;
+     height: 100% !important;
+     grid-column: 1/ 10 !important;
+     grid-row: 1 !important;
+
    }
 
    .projects-link{
-     height: 100%;
-     grid-column: 6/ 7;
+     height: 100% !important;
+     grid-column: 2/ 3 !important;
    }
 
    .about-contact{
-     height: 100%;
-     grid-column: 7/ 8;
+     height: 100% !important;
+     grid-column: 4/ 5 !important;
    }
 
    .contact{
-     height: 100%;
-     grid-column: 8/ 10;
+     height: 100% !important;
+     grid-column: 7/ 9 !important;
     
    }
    
    .name-text{
-     color: #212d50;
-     margin: 15% 0 0 40%;
+     color: #212d50 !important;
+     margin-left: 35% !important;
+     margin-top: 3% !important;
+     /* margin-bottom: 20%; */
   }
 
    .project-text{
-     margin: 40% 0 0 0;
+    margin: 0 0 0 0 !important;
     
    }
    .about-text{
-     margin: 40% 0 0 10%;
+    margin: 0 0 0 30% !important;
     
    }
    .contact-text{
-     margin: 20% 0 0 0;
+    margin: 0 0 0 0 !important;
     
    }
    
    .projects-font{
      line-height: 40px;
-     font-size: 20px;
+     font-size: 13px;
      font-weight: 400;
      cursor: pointer;
      letter-spacing: 3px;
@@ -146,14 +118,14 @@
    }
    .about-font{
      line-height: 40px;
-     font-size: 20px;
+     font-size: 13px;
      font-weight: 400;
      cursor: pointer;
      letter-spacing: 3px;
    }
    .contact-font{
      line-height: 40px;
-     font-size: 20px;
+     font-size: 13px;
      font-weight: 400;
      cursor: pointer;
      letter-spacing: 3px;
@@ -179,16 +151,258 @@
   }
   
   div.intro{
-    width: 100%;
-    height: 40%;
-    margin-top: 50%;
-    margin-left: 5%;
-    position: absolute;
-    color: rgb(66, 66, 66);
-    font-size: 45px;
-    line-height: 45px;
-    font-weight: 400;
+    width: 100% !important;
+    height: 30% !important;
+    margin-top: 98% !important;
+    margin-left: 5% !important;
+    position: absolute !important;
+    color: rgb(66, 66, 66) !important;
+    /* font-size: 45px !important; */
+    /* line-height: 45px !important;
+    font-weight: 400 !important;
     
-    letter-spacing: 0px;
+    letter-spacing: 0px !important; */
   }
+
+  .portfolio{
+    display: grid !important;
+    grid-template-columns: 1fr !important;
+    grid-auto-rows: 40% !important;
+    grid-gap: 1rem !important;
+    /* margin-top: 5%; */
+   width: 90% !important;
+    height: 100% !important;
+    margin-left: 5% !important;
+    margin-right: 5% !important;
+    
+  }
+
+  
+  .portfolio-heading {
+    display: flex !important;
+    margin-top: 20% !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    grid-column: 1 !important;
+    width: 80%;
+    height: 50%;
+    grid-row: 1 !important;
+}
+.portfolio-heading-blurb{
+      /* margin-left: 10% !important; */
+      text-align: justify !important;
+      font-family: 'Open Sans', sans-serif !important;
+      font-size: 10px !important;
+      height: 100%;
+      width: 88%;
+}
+.portfolio-heading-text {
+  font-family: 'Montserrat', sans-serif !important;
+  font-weight: 400 !important;
+  color: #212d50 !important;
+  font-size: 15px !important;
+  /* line-height: 45px; */
+  letter-spacing: 0px !important;
+}
+
+  .box-1 {
+    /* height: 100%; */
+    grid-column: 1 !important;
+    grid-row: 2 !important;
+  }
+
+  .box-2{
+    grid-column: 1 !important;
+    grid-row: 3 !important;
+  }
+  .box-3{
+    grid-column: 1 !important;
+    grid-row: 4 !important;
+  }
+  .box-4{
+    grid-column: 1 !important;
+    grid-row: 5 !important;
+  }
+  .box-5{
+    grid-column: 1 !important;
+    grid-row: 6 !important;
+  }
+  .box-6{
+    grid-column: 1 !important;
+    grid-row: 7 !important;
+  }
+  
+
+  .paragraph-container{
+    display: none !important;
+    /* background: rgb(242, 240, 236); */
+    background: #F9F8F6;
+    margin-top: 220% !important;
+    width: 100%;
+    height: 150%;
+    /* display: flex;  */
+    
+    /* align-items: center; */
+    
+  }
+  
+  
+  .paragraph{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 40%;
+    grid-gap: 1rem;
+    margin-top: 15%;
+    margin-left: 10%;
+    width: 70%;
+    height: 100%;
+    position: absolute;
+  
+  }
+  
+  
+  
+  .about-blurb{
+    grid-column: 1 ;
+    grid-row: 1 ;
+    width: 100%;
+    /* margin-left: 5%; */
+    display: flex;
+    flex-direction: column;
+    
+  }
+  
+  
+  
+  div.about-picture img{
+    /* background-image: url("../assets/jhedi2_40\ 3.jpg");
+    background-size: cover; */
+    display: block;
+  max-width: 100%;
+  height: auto;
+    margin-right: 10%;
+    grid-column: 1 !important;
+    grid-row: 2 !important;
+  }
+
+
+
+
+
+
+  
+  
+  .second-about-blurb{
+    grid-column: 1 !important;
+    grid-row: 3 !important;
+    margin-top: 10%;
+    margin-left: 0;
+  }
+  
+  .second-about-img{
+    background-image: url("../assets/IMG_2635.jpg");
+    background-size: cover;
+    grid-column: 1 !important;
+    grid-row: 3 !important;
+    margin-top: 30%;
+  }
+  /* .third-about-img{
+    grid-column: 2 / 3;
+    grid-row: 2/3;
+  
+  } */
+                                                                                  
+  
+  .about-picture{
+    background-image: url("../assets/jhedi2_40\ 3.jpg");
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    margin-right: 10%;
+    grid-column: 6 / 8;
+    grid-row: 1/2;
+  }
+
+    .contact-font-last{
+  
+    width: 100% !important;
+    height: 100% !important;
+    margin-top: 320%;
+    
+  } 
+   
+  .contact-container{
+    display: grid !important;
+    grid-template-columns: 1fr !important;
+    grid-auto-rows: 40% !important;
+    grid-gap: 0.1rem !important;
+    /* margin-top: 380% !important; */
+    width: 93% !important;
+    height: 100% !important;
+    margin-left: 5% !important;
+    margin-right: 5% !important;
+  }
+  
+  
+  
+  div#map{
+   height: 200px !important;
+   width: 100% !important;
+   margin-left: 0 !important;
+   /* margin-right: 40% !important; */
+  
+  }
+  
+  
+  .contact-page{ 
+    grid-column: 1 !important;
+    grid-row: 2 !important;
+    margin-top: 10% !important;
+  }
+  
+  #map{
+    grid-column: 1 !important;
+    grid-row: 1 !important;
+    /* height: 150px !important; */
+   
+    /* margin-right: 30% !important; */
+  }
+  
+  .contact-form{
+    grid-column: 3 / 6;
+    grid-row: 3/4;
+  
+  }
+  .contact-page-text {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    color: #212d50 !important;
+    font-size: 30px !important;
+    /* line-height: 45px; */
+    letter-spacing: 3px !;
+    
+}
+.contact-page-text-email  {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px !important;
+  color: #43454B;
+}
+.email{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px !important;
+  color: #43454B;
+}
+
+  div.footer {
+    display: flex !important;
+    flex-direction: row !important;
+    justify-content: center !important;
+    align-items: center !important;
+    bottom: 0 !important;
+    border-top: 1px solid lightgray !important;
+    margin-top: 35% !important;
+    height: 5% !important; 
+    width: 100% !important;
+}
+
 }
